ignoring  some files.